# 2D_teamfigther

./: CMakeLists.txt  README.md  build_app.sh  build_wasm.sh
libs/MGL/include/: action.hpp  dynamic_sprite_sheet.hpp  event_handler.hpp  game.hpp  game_state.hpp  game_window.hpp  grahics.hpp  input_handler.hpp  mgl_config.hpp  mgl_texture.hpp  mgl_thread_pool.hpp  mgl_time.hpp  player_action.hpp  sprite_render.hpp  sprite_renderer.hpp  sprite_sheet.hpp  window.hpp
libs/MGL/src/: action.cpp  dynamic_sprite_sheet.cpp  event_handler.cpp  game.cpp  game_window.cpp  input_handler.cpp  mgl_config.cpp  mgl_texture.cpp  mgl_thread_pool.cpp  mgl_time.cpp  renderer.cpp  sprite_render.cpp  sprite_sheet.cpp  window.cpp
src/: block_matrix.cpp  block_matrix.hpp  block_world.cpp  block_world.hpp  config.hpp  game.cpp  game.hpp  game_logic.hpp  header.hpp  main.cpp  main_wasm.cpp  physics.hpp  physics_engine.cpp  physics_engine.hpp  physics_engine.txt  source.cpp  tile_world.hpp  world.cpp  world.hpp  world_render.cpp  world_render.hpp
src/animate/: animate_actor.hpp
src/ecs/: source.txt
src/ecs/core/: component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  types.hpp
src/entities/actor/: actor.cpp  actor.hpp  actor_render.cpp  actor_render.hpp
src/entities/item/: item.hpp
src/renderer/: actor_render.cpp  actor_render.hpp  player_render.cpp  player_render.hpp  players.cpp  players.hpp  renderer.cpp  renderer.hpp  world_render.cpp  world_render.hpp  world_render_cpp.txt  world_render_hpp.txt
src/units/: actor.hpp  aoe_effect.hpp  block.hpp
(+30 files in other folders)
